# my-advent-of-code-project

./: .clang-format  .gitignore  .jupyter  .pylintrc  CMakeLists.txt  CMakePresets.json  aoc.py  cppcheck_suppressions.txt  readme.md  requirements.txt
2015/day02/: CMakeLists.txt  day02.cpp
2017/day01/: 2017_day01.py  CMakeLists.txt  day01.h  main.cpp
2018/day04/: 2018_day04.h  CMakeLists.txt  main.cpp  test_day04.cpp
2019/day02/: 2019_day02.cpp  2019_day02.h  CMakeLists.txt  day02.cpp  main.cpp  test_day02.cpp
2021/day04/: CMakeLists.txt  day04.cpp  day04.h  main.cpp  test_day04.cpp
2022/day02/: CMakeLists.txt  day2.cpp
2022/day04/: CMakeLists.txt  day04.py  day4.cpp  day4.py
2022/day05/: CMakeLists.txt  day05.cpp
2022/day07/: 2022_day07.h  CMakeLists.txt  main.cpp
2022/day12/: CMakeLists.txt  day12.cpp
2022/day15/: CMakeLists.txt  day15.cpp  day15_2.cpp  preprocess.awk
2022/day18/: CMakeLists.txt  day18.cpp
2022/day21/: CMakeLists.txt  day21.cpp  day21.py
libs/3pp/: CMakeLists.txt
libs/aoc-runner/cpp/: CMakeLists.txt  readme.md
libs/aoc-utils/: CMakeLists.txt
libs/aoc-utils/include/: aoc_utils.h
libs/aoc-utils/src/: aoc_utils.cpp
libs/aoc-utils/test/: test_aoc_utils.cpp
libs/aoc_runner/cpp/: CMakeLists.txt
libs/aoc_utils/cpp/: CMakeLists.txt
libs/string-utils/: CMakeLists.txt
libs/string-utils/include/: string_utils.h
libs/string-utils/src/: string_utils.cpp
libs/string-utils/test/: test_string_utils.cpp
libs/string_utils/: CMakeLists.txt
libs/string_utils/include/: string_utils.h
src/: CMakeLists.txt
src/2015/: CMakeLists.txt
src/2015/day01/: CMakeLists.txt  day01.cpp
src/2015/day02/: CMakeLists.txt  day02.cpp
src/2015/day03/: CMakeLists.txt  day03.cpp  day03.h  main.cpp  test_day03.cpp
src/2015/day04/: CMakeLists.txt  day04.py
src/2015/day05/: CMakeLists.txt  day05.cpp  day05.h  main.cpp
src/2015/day06/: CMakeLists.txt  day06.cpp  day06.h  main.cpp  preprocess.awk  test_day06.cpp
src/2015/day07/: CMakeLists.txt  analysis.awk  day07.cpp  day07.h  main.cpp
src/2015/day08/: CMakeLists.txt  day08.cpp
src/2015/day09/: CMakeLists.txt  day09.cpp
src/2015/day10/: CMakeLists.txt  day10.cpp
src/2015/day11/: CMakeLists.txt  day11.cpp
src/2015/day12/: CMakeLists.txt  day12.cpp  day12.py
src/2015/day13/: day13.cpp
src/2015/day14/: day14.cpp
src/2015/day17/: day17.cpp
src/2016/: CMakeLists.txt
src/2016/day01/: CMakeLists.txt  day01.py  main.cpp  test_day01.cpp
src/2016/day02/: CMakeLists.txt  day02-2.py  day02.cpp  day02.h  day02.py  main.cpp
src/2016/day03/: day03.cpp  day03.h  main.cpp
src/2016/day04/: CMakeLists.txt  day04.cpp  day04.h  main.cpp
src/2016/day05/: CMakeLists.txt  day05.py
src/2016/day06/: day06.py
src/2016/day07/: CMakeLists.txt  day07.py
src/2016/day08/: day08.cpp
src/2016/day09/: CMakeLists.txt  day09.cpp
src/2016/day10/: day10.cpp
src/2017/: CMakeLists.txt
src/2017/day01/: CMakeLists.txt  day01.cpp  main.cpp  test_day01.cpp
src/2017/day02/: day02.cpp  day02.h  main.cpp  test_day02.cpp
src/2017/day03/: CMakeLists.txt  main.cpp
src/2017/day04/: CMakeLists.txt  day04.cpp  day04.h  main.cpp
src/2017/day05/: day05.cpp  day05.h  main.cpp  test_day05.cpp
src/2017/day06/: CMakeLists.txt  day06.py
src/2017/day07/: day07.py
src/2017/day08/: day08.cpp
src/2017/day09/: CMakeLists.txt  day09.cpp
src/2017/day11/: CMakeLists.txt  day11.cpp
src/2018/: CMakeLists.txt
src/2018/day01/: CMakeLists.txt  day01.cpp  main.cpp  test_day01.cpp
src/2018/day02/: CMakeLists.txt  day02.cpp  day02.h  main.cpp  test_day02.cpp
src/2018/day03/: CMakeLists.txt  day03.cpp  day03.h  main.cpp
src/2018/day04/: CMakeLists.txt  day04.cpp  day04.h  main.cpp  preprocess.sh  test_day04.cpp
src/2018/day05/: CMakeLists.txt  day05.cpp  day05.h  main.cpp  test_day05.cpp
src/2018/day06/: day06.py
src/2018/day07/: CMakeLists.txt  day07.py
src/2018/day08/: CMakeLists.txt  day08.cpp
src/2018/day09/: CMakeLists.txt  day09.cpp
src/2018/day10/: CMakeLists.txt  day10.cpp
src/2019/: CMakeLists.txt
src/2019/day01/: CMakeLists.txt  day01.cpp  day01.h  main.cpp  test_day01.cpp
src/2019/day02/: CMakeLists.txt  day02.cpp  day02.h  main.cpp  test_day02.cpp
src/2019/day03/: CMakeLists.txt  day03.cpp  day03.h  main.cpp
src/2019/day04/: CMakeLists.txt  main.cpp
src/2019/day05/: CMakeLists.txt  day05.cpp  day05.py
src/2019/day06/: CMakeLists.txt  day06.cpp  main.cpp
src/2019/day07/: CMakeLists.txt  day07.cpp  day07.py
src/2019/day08/: day08.go  go.mod
src/2019/day09/: CMakeLists.txt  day09.cpp
src/2019/day10/: CMakeLists.txt  day10.cpp
src/2019/day11/: CMakeLists.txt  day11.cpp
src/2019/day12/: CMakeLists.txt  day12.cpp
src/2019/day13/: CMakeLists.txt  day13.cpp
src/2019/day14/: day14.cpp
src/2019/intcode-computer/: CMakeLists.txt  intcode_computer.cpp  intcode_computer.h  test_intcode_computer.cpp
src/2020/: CMakeLists.txt
src/2020/day01/: CMakeLists.txt  day01.go  go.mod
src/2020/day02/: CMakeLists.txt  day02.go  go.mod
src/2020/day03/: day03.py
src/2020/day04/: CMakeLists.txt  day04.py
src/2020/day05/: day05.py
src/2020/day06/: day06.py
src/2020/day07/: CMakeLists.txt  day07.py
src/2020/day08/: day08.py
src/2020/day09/: day09.py
src/2020/day10/: day10.cpp
src/2020/day11/: day11.py
src/2021/: CMakeLists.txt
src/2022/: CMakeLists.txt
src/2023/: CMakeLists.txt
src/2024/: CMakeLists.txt
src/2025/: CMakeLists.txt
tools/: CMakeLists.txt  activate.sh  aoc_completion.sh  aoc_workspace.py  bench  bench-2024  bench-visualize.py  cmake_utils.py  conan_utils.py  event_status.py  setup_cmake.py  toolchain_utils.py  workspace.sh
tools/aoc-bench/: CMakeLists.txt  aoc_bench.go  example.go  go.mod  py_launcher
tools/commands/: bench.py  build.py  event_status.py  fetch.py  format.py  lint.py  setup.py  setup_day.py  status.py  test.py  used_file_extensions.py
tools/python-example/: CMakeLists.txt  example_module.py  test_example_module.py
tools/setup-day/: CMakeLists.txt  setup_day.py
tools/setup_day/: __init__.py  setup_day.py
(+457 files in other folders)
